tests/data/motifs/bad/test_pfms_bad2.jaspar
>MA0006.1	Ahr::Arnt
C  [     3      0      0      0      0      0 ]
